--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "gulp-shell": "*",
     "gulp-uglify": "*",
     "gulp-util": "*",
-    "gulp-webpack-config": "*",
+    "gulp-webpack-config": "0.1.1",
+    "gulp-wrap-amd-infer": "*",
     "gulp-zip": "*",
     "imports-loader": "*",
     "jquery": "*",
