--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gulp-zip": "*",
     "imports-loader": "*",
     "jquery": "*",
+    "jquery-xhr": "^2.1.3",
     "karma": "*",
     "karma-chai": "*",
     "karma-chrome-launcher": "*",
@@ -65,7 +66,6 @@
     "karma-safari-launcher": "*",
     "karma-spec-reporter": "*",
     "mocha": "*",
-    "node-jquery-xhr": "*",
     "nuget": "*",
     "queue-async": "*",
     "webpack": "*",
