Added test case for https://github.com/kmalakoff/knockback/issues/145

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "jquery": "*",
     "backbone-relational": "*",
     "backbone-modelref": "*",
+    "backbone.localstorage": "*",
     "lodash": "*",
     "backbone-orm": "*",
     "moment": "2.x",
