--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
+sudo: false
 language: node_js
 node_js:
-  - 4
-sudo: false
+  - "6"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 
 notifications:
   email:
