--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "Kevin Malakoff",
     "url": "https://github.com/kmalakoff"
   },
+  "license": "MIT",
   "keywords": [
     "knockback",
     "knockbackjs",
