--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "gulp-wrap-amd-infer": "*",
     "gulp-zip": "*",
     "imports-loader": "*",
-    "jsdom": "^9.9.1",
+    "jsdom": "*",
     "karma": "*",
     "karma-chai": "*",
     "karma-chrome-launcher": "*",
