--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "mocha": "*",
     "nuget": "*",
     "queue-async": "*",
+    "requirejs": "*",
     "webpack": "*"
   },
   "optionalDependencies": {
