--- a/package.json
+++ b/package.json
@@ -34,16 +34,18 @@
   },
   "devDependencies": {
     "async": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "^6.24.0",
     "chai": "*",
-    "codo": "2.x",
-    "coffee-loader": "*",
-    "coffee-script": "*",
+    "eslint": "*",
+    "eslint-config-airbnb-base": "*",
+    "eslint-plugin-import": "*",
     "event-stream": "*",
     "fs-extra": "*",
     "fs-readdir-recursive": "*",
     "gulp": "*",
+    "gulp-babel": "^6.1.2",
     "gulp-browserify": "*",
-    "gulp-coffee": "*",
     "gulp-concat": "*",
     "gulp-header": "*",
     "gulp-mocha": "3.x",
@@ -58,10 +60,10 @@
     "imports-loader": "*",
     "jsdom": "*",
     "karma": "*",
+    "karma-babel-preprocessor": "*",
     "karma-chai": "*",
     "karma-chrome-launcher": "*",
     "karma-cli": "*",
-    "karma-coffee-preprocessor": "*",
     "karma-firefox-launcher": "*",
     "karma-mocha": "*",
     "karma-phantomjs-launcher": "*",
