--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "async": "*",
     "babel-loader": "*",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2015": "*",
     "chai": "*",
     "eslint": "*",
     "eslint-config-airbnb-base": "*",
