--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "scripts": {
     "test": "gulp test",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "docs": "./node_modules/.bin/codo -n Knockback.js -o doc src/."
   },
   "dependencies": {
