--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "async": "*",
     "babel-loader": "*",
     "babel-preset-es2015": "*",
+    "babel-preset-stage-1": "^6.22.0",
     "chai": "*",
     "eslint": "*",
     "eslint-config-airbnb-base": "*",
