--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "test": "gulp test",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "lint-fix": "eslint . --fix",
     "docs": "./node_modules/.bin/codo -n Knockback.js -o doc src/."
   },
