--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   },
   "devDependencies": {
     "async": "*",
+    "babel-core": "*",
     "babel-loader": "*",
     "babel-plugin-transform-async-to-generator": "*",
-    "babel-plugin-transform-runtime": "*",
+    "babel-polyfill": "*",
     "babel-preset-es2015": "*",
     "babel-preset-stage-1": "*",
     "chai": "*",
+    "cross-spawn": "*",
     "eslint": "*",
     "eslint-config-airbnb-base": "*",
     "eslint-plugin-import": "*",
@@ -49,12 +51,10 @@
     "fs-extra": "*",
     "fs-readdir-recursive": "*",
     "gulp": "*",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "*",
     "gulp-browserify": "*",
     "gulp-concat": "*",
     "gulp-header": "*",
-    "gulp-mocha": "3.x",
-    "gulp-mocha-phantomjs": "*",
     "gulp-rename": "*",
     "gulp-shell": "*",
     "gulp-uglify": "*",
@@ -63,16 +63,17 @@
     "gulp-wrap-amd-infer": "*",
     "gulp-zip": "*",
     "imports-loader": "*",
+    "install": "^0.8.7",
     "jsdom": "*",
     "karma": "*",
-    "karma-babel-preprocessor": "^6.0.1",
+    "karma-babel-preprocessor": "*",
     "karma-chai": "*",
     "karma-chrome-launcher": "*",
     "karma-cli": "*",
     "karma-firefox-launcher": "*",
     "karma-mocha": "*",
     "karma-phantomjs-launcher": "*",
-    "karma-requirejs": "^1.1.0",
+    "karma-requirejs": "*",
     "karma-safari-launcher": "*",
     "karma-spec-reporter": "*",
     "mocha": "*",
