--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "stage-1"],
-  "plugins": ["transform-async-to-generator"]
+  "presets": ["es2015", "stage-0"],
+  "plugins": ["transform-class-properties", "transform-async-to-generator"]
 }
