--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   },
   "devDependencies": {
     "babel-core": "*",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "*",
     "babel-plugin-transform-async-to-generator": "*",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-polyfill": "*",
     "babel-preset-es2015": "*",
-    "babel-preset-stage-1": "*",
+    "babel-preset-stage-0": "^6.22.0",
     "chai": "*",
     "cross-spawn": "*",
     "eslint": "*",
