--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-plugin-transform-class-properties": "*",
     "babel-polyfill": "*",
     "babel-preset-es2015": "*",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-0": "*",
     "chai": "*",
     "cross-spawn": "*",
     "eslint": "*",
@@ -51,6 +51,7 @@
     "event-stream": "*",
     "fs-extra": "*",
     "fs-readdir-recursive": "*",
+    "globby": "^6.1.0",
     "gulp": "*",
     "gulp-babel": "*",
     "gulp-browserify": "*",
