--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "eslint-plugin-import": "*",
     "event-stream": "*",
     "fs-extra": "*",
-    "fs-readdir-recursive": "*",
-    "globby": "^6.1.0",
+    "glob": "*",
     "gulp": "*",
     "gulp-babel": "*",
     "gulp-browserify": "*",
