--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "test": "gulp test",
-    "lint": "eslint src/",
-    "lint-fix": "eslint src/ --fix",
+    "lint": "eslint src/ test/ config/",
+    "lint-fix": "eslint src/ test/ config/ --fix",
     "docs": "./node_modules/.bin/codo -n Knockback.js -o doc src/."
   },
   "dependencies": {
