--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "docs": "./node_modules/.bin/codo -n Knockback.js -o doc src/."
   },
   "dependencies": {
-    "underscore": ">=1.1.7",
     "backbone": ">=0.5.1",
-    "knockout": ">=2.1.0"
+    "knockout": ">=2.1.0",
+    "require-glob": "^3.2.0",
+    "underscore": ">=1.1.7"
   },
   "devDependencies": {
     "babel-core": "*",
