--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "moment": "*",
     "nuget": "*",
     "requirejs": "*",
-    "webpack": "*"
+    "webpack": "*",
+    "window-or-global": "*"
   },
   "optionalDependencies": {
     "backbone-relational": "*",
