--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "url": "http://github.com/kmalakoff/knockback.git"
   },
   "scripts": {
+    "bootstrap": "./node_modules/.bin/babel-node scripts/bootstrap.js",
+    "clean": "./node_modules/.bin/babel-node scripts/clean.js",
     "test": "gulp test",
     "lint": "eslint src/ test/ config/",
     "lint-fix": "eslint src/ test/ config/ --fix",
@@ -34,6 +36,7 @@
     "underscore": ">=1.1.7"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
     "babel-core": "*",
     "babel-eslint": "*",
     "babel-loader": "*",
