--- a/packages/knockback/package.json
+++ b/packages/knockback/package.json
@@ -2,7 +2,7 @@
   "name": "knockback",
   "version": "2.0.0-alpha.1",
   "description": "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
-  "main": "./dist/knockback.js",
+  "main": "dist/knockback.js",
   "author": {
     "name": "Kevin Malakoff",
     "url": "https://github.com/kmalakoff"
