--- a/packages/knockback-associations/package.json
+++ b/packages/knockback-associations/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knockback-associations",
+  "name": "@knockback/knockback-associations",
   "version": "2.0.0-alpha.1",
   "description": "Provides associations extensions for Knockback.js",
   "main": "dist/knockback-associations.js",
@@ -28,7 +28,7 @@
     "underscore": ">=1.1.7",
     "backbone": ">=0.5.1",
     "knockout": ">=2.1.0",
-    "knockback": "^2.0.0-alpha.1",
+    "@knockback/knockback-core": "^2.0.0-alpha.1",
     "backbone-associations": "latest"
   }
 }
