--- a/packages/knockback-core/package.json
+++ b/packages/knockback-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knockback",
+  "name": "@knockback/knockback-core",
   "version": "2.0.0-alpha.1",
   "description": "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
   "main": "dist/knockback.js",
@@ -27,6 +27,7 @@
   "dependencies": {
     "underscore": ">=1.1.7",
     "backbone": ">=0.5.1",
-    "knockout": ">=2.1.0"
+    "knockout": ">=2.1.0",
+    "window-or-global": "*"
   }
 }
