--- a/packages/knockback-relational/package.json
+++ b/packages/knockback-relational/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knockback-relational",
+  "name": "@knockback/knockback-relational",
   "version": "2.0.0-alpha.1",
   "description": "Provides relational extensions for Knockback.js",
   "main": "dist/knockback-relational.js",
@@ -28,7 +28,7 @@
     "underscore": ">=1.1.7",
     "backbone": ">=0.5.1",
     "knockout": ">=2.1.0",
-    "knockback": "^2.0.0-alpha.1",
+    "@knockback/knockback-core": "^2.0.0-alpha.1",
     "backbone-relational": "latest"
   }
 }
