--- a/packages/knockback/package.json
+++ b/packages/knockback/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@knockback/core",
+  "name": "knockback",
   "version": "2.0.0-alpha.1",
   "description": "Knockback.js provides Knockout.js magic for Backbone.js Models and Collections",
-  "main": "dist/knockback-core.js",
+  "main": "dist/knockback.js",
   "author": {
     "name": "Kevin Malakoff",
     "url": "https://github.com/kmalakoff"
