--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,7 @@
 {
-  "lerna": "2.0.0-beta.38",
+  "lerna": "2.0.0-rc.5",
   "packages": [
     "packages/*"
   ],
-  "version": "2.0.0-alpha.1",
   "hoist": true
 }
