--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "event-stream": "*",
     "fs-extra": "*",
     "fs-readdir-recursive": "*",
-    "gulp": "*",
+    "gulp": "^3.9.1",
     "gulp-browserify": "*",
     "gulp-coffee": "*",
     "gulp-concat": "*",
@@ -67,6 +67,7 @@
     "karma-phantomjs-launcher": "*",
     "karma-safari-launcher": "*",
     "karma-spec-reporter": "*",
+    "minimatch": "^3.0.2",
     "mocha": "*",
     "nuget": "*",
     "queue-async": "*",
