--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-  "plugins": ["transform-class-properties", "transform-async-to-generator"],
-  "presets": ["es2015", "stage-0"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/transform-async-to-generator"
+  ],
+  "presets": ["@babel/preset-env"]
 }
