--- a/package.json
+++ b/package.json
@@ -42,15 +42,28 @@
     "underscore": "*"
   },
   "devDependencies": {
-    "babel-cli": "*",
-    "babel-core": "*",
-    "babel-eslint": "*",
-    "babel-loader": "*",
-    "babel-plugin-transform-async-to-generator": "*",
-    "babel-plugin-transform-class-properties": "*",
-    "babel-polyfill": "*",
-    "babel-preset-es2015": "*",
-    "babel-preset-stage-0": "*",
+    "@babel/core": "^7.4.4",
+    "@babel/cli": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "browserify": "^16.2.3",
     "chai": "*",
     "cross-spawn": "*",
@@ -59,8 +72,8 @@
     "eslint-plugin-import": "*",
     "event-stream": "*",
     "glob": "*",
-    "gulp": "*",
-    "gulp-babel": "*",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "*",
     "gulp-header": "*",
@@ -86,6 +99,6 @@
     "nuget": "*",
     "requirejs": "*",
     "rimraf": "*",
-    "webpack": "*"
+    "webpack": "^4.31.0"
   }
 }
