--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,4 @@
 {
-  "lerna": "2.0.0-rc.5",
-  "packages": [
-    "packages/*"
-  ],
-  "hoist": true
+  "packages": ["packages/*"],
+  "version": "0.0.0"
 }
