Upgrade pipeline dependencies

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "chai": "*",
     "codo": "2.x",
     "coffee-loader": "0.6.x",
-    "coffee-script": "*",
+    "coffee-script": "^1.6.3",
     "event-stream": "*",
     "fs-extra": "*",
     "fs-readdir-recursive": "*",
@@ -47,7 +47,6 @@
     "gulp-concat": "*",
     "gulp-header": "*",
     "gulp-mocha": "3.x",
-    "gulp-mocha-phantomjs": "*",
     "gulp-rename": "*",
     "gulp-shell": "*",
     "gulp-uglify": "*",
@@ -59,17 +58,17 @@
     "jsdom": "*",
     "karma": "*",
     "karma-chai": "*",
-    "karma-chrome-launcher": "*",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "*",
     "karma-coffee-preprocessor": "*",
     "karma-firefox-launcher": "*",
     "karma-mocha": "*",
-    "karma-phantomjs-launcher": "*",
     "karma-safari-launcher": "*",
     "karma-spec-reporter": "*",
     "minimatch": "^3.0.4",
     "mocha": "*",
     "nuget": "*",
+    "puppeteer": "^1.15.0",
     "queue-async": "*",
     "requirejs": "*",
     "webpack": "*"
