--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "build": "",
     "docs": "./node_modules/.bin/codo -n Knockback.js -o doc src/.",
+    "lint": "",
     "test": "gulp test:node",
     "test:engines": "npm test"
   },
