--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   test:
     name: Node.js ${{ matrix.node-version }} ${{ matrix.os }}
