--- a/.depcheckrc.json
+++ b/.depcheckrc.json
@@ -9,5 +9,28 @@
     "**/*.ts": ["typescript"],
     "**/*.tsx": ["typescript"]
   },
-  "ignores": ["@babel/core", "@babel/preset-env", "async", "chai", "gulp-wrap-amd-infer", "gulp-zip", "imports-loader", "jsdom", "karma-chai", "karma-chrome-launcher", "karma-cli", "karma-coffee-preprocessor", "karma-firefox-launcher", "karma-mocha", "karma-safari-launcher", "karma-spec-reporter", "minimatch", "mocha", "puppeteer", "requirejs", "localStorage", "xmlhttprequest"]
+  "ignores": [
+    "@babel/core",
+    "@babel/preset-env",
+    "async",
+    "chai",
+    "gulp-wrap-amd-infer",
+    "gulp-zip",
+    "imports-loader",
+    "jsdom",
+    "karma-chai",
+    "karma-chrome-launcher",
+    "karma-cli",
+    "karma-coffee-preprocessor",
+    "karma-firefox-launcher",
+    "karma-mocha",
+    "karma-safari-launcher",
+    "karma-spec-reporter",
+    "minimatch",
+    "mocha",
+    "puppeteer",
+    "requirejs",
+    "localStorage",
+    "xmlhttprequest"
+  ]
 }
